--- a/prism-management-console-web/src/components/contactDetail/organisms/EditContactModal/_style.scss
+++ b/prism-management-console-web/src/components/contactDetail/organisms/EditContactModal/_style.scss
@@ -61,6 +61,8 @@
       overflow-y: auto;
       .infoRow {
         .RowInfo {
+          display: flex;
+          justify-content: space-between;
           .contactsTitle {
             .contactsContainer {
               display: flex;
